--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
  <head>
    <title>Document</title>
-   <meta charset="utf-8">
+   <meta charset="UTF-8">
  </head>
  <body>
- 	
+
  </body> 
 </html>
